[package]
name = "mainline"
version = "5.3.1"
authors = ["nuh.dev"]
edition = "2021"
description = "Simple, robust, BitTorrent's Mainline DHT implementation"
homepage = "https://github.com/pubky/mainline"
license = "MIT"
keywords = ["bittorrent", "torrent", "dht", "kademlia", "mainline"]
categories = ["network-programming"]
repository = "https://github.com/pubky/mainline"
exclude = ["/docs/*", "/examples/*"]

[dependencies]
getrandom = "0.2"
serde_bencode = "^0.2.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
thiserror = "2.0.11"
crc = "3.2.1"
sha1_smol = "1.0.1"
ed25519-dalek = "2.1.1"
tracing = "0.1"
lru = { version = "0.13.0", default-features = false }
dyn-clone = "1.0.18"

document-features = "0.2.10"

# `node` dependencies
flume = { version = "0.11.1", features = [], default-features = false, optional = true }

# `async` dependencies
futures-lite = { version = "2.6.0", default-features = false, optional = true }

[dev-dependencies]
clap = { version = "4.5.29", features = ["derive"] }
futures = "0.3.31"
tracing-subscriber = "0.3"
ctrlc = "3.4.5"
histo = "1.0.0"
rayon = "1.10"
dashmap = "6.1"
flume = "0.11.1"
colored = "3.0.0"
chrono = "0.4"

[features]
## Include [Dht] node.
node = ["dep:flume"]
## Enable [Dht::as_async()] to use [async_dht::AsyncDht].
async = ["node", "flume/async", "dep:futures-lite"]

full = ["async"]

default = ["full"]

[package.metadata.docs.rs]
all-features = true
