[package]
name = "mainline"
version = "6.1.1"
authors = [
    "nuh.dev",
    "SeverinAlexB <severin@synonym.to>",
    "SHAcollision <shacollision@synonym.to>",
    "dzdidi <denys@synonym.to>",
    "Kevin Karsopawiro <kevin@synonym.to>"
]
edition = "2021"
rust-version = "1.85"
description = "Simple, robust, BitTorrent's Mainline DHT implementation"
homepage = "https://github.com/pubky/mainline"
license = "MIT"
keywords = ["bittorrent", "torrent", "dht", "kademlia", "mainline"]
categories = ["network-programming"]
repository = "https://github.com/pubky/mainline"
exclude = ["/docs/*", "/examples/*"]

[dependencies]
getrandom = "0.4"
serde_bencode = "^0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.18"
crc = "3.4.0"
sha1_smol = "1.0.1"
ed25519-dalek = "3.0.0-pre.1"
# Pinned: digest 0.11.0-rc.11+ removed crypto_common re-export, breaking curve25519-dalek
# See: https://github.com/pubky/mainline/issues/80
digest = "=0.11.0-rc.9"
tracing = "0.1.44"
lru = { version = "0.16.2", default-features = false }
dyn-clone = "1.0.20"

document-features = "0.2.12"

# `node` dependencies
flume = { version = "0.12.0", features = [
], default-features = false, optional = true }

# `async` dependencies
futures-lite = { version = "2.6.1", default-features = false, optional = true }

[dev-dependencies]
clap = { version = "4.5.57", features = ["derive"] }
futures = "0.3.31"
tracing-subscriber = "0.3"
ctrlc = "3.5.1"
histo = "1.0.0"
rayon = "1.11.0"
dashmap = "6.1"
flume = "0.12.0"
colored = "3.1.1"
chrono = "0.4"

[features]
## Include [Dht] node.
node = ["dep:flume"]
## Enable [Dht::as_async()] to use [async_dht::AsyncDht].
async = ["node", "flume/async", "dep:futures-lite"]

full = ["async"]

default = ["full"]

[package.metadata.docs.rs]
all-features = true
